--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 19:52 -->
+<!-- 2022-03-12 Sat 20:30 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org1d76803">makefile</a></li>
+<li><a href="#orge543b84">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,7 +77,12 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgb2ec88f">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org80a993c">yadm git gnumake
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-lisp match-braces rainbow-braces" id="org481010f">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -107,12 +112,12 @@ ensure () {
     hash "$1" 2&gt; /dev/null
     if [ $? -ne 0 ]; then
 	hash nix 2&gt; /dev/null
-	[ $? -ne 0 ] &amp;&amp; sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon || :
+	[ $? -ne 0 ] &amp;&amp; sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon
 	[ -z "$2" ] &amp;&amp; nix-env -i "$2" || nix-env -i "$1"
     fi
 }
 
-for p in yadm git; do ensure $p; done
+for p in yadm git gnumake; do ensure $p; done
 
 setFail
 
@@ -123,14 +128,16 @@ yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.g
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
+
+for p in yadm git gnumake; do nix-env -e $p; done
 </code></pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org1d76803" class="outline-2">
-<h2 id="org1d76803">makefile</h2>
-<div class="outline-text-2" id="text-org1d76803">
+<div id="outline-container-orge543b84" class="outline-2">
+<h2 id="orge543b84">makefile</h2>
+<div class="outline-text-2" id="text-orge543b84">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -160,7 +167,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 19:52</p>
+<p class="date">Created: 2022-03-12 Sat 20:30</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -172,12 +179,12 @@ ensure () {
     hash "$1" 2> /dev/null
     if [ $? -ne 0 ]; then
         hash nix 2> /dev/null
-        [ $? -ne 0 ] && sh <(curl -fsSL https://nixos.org/nix/install) --daemon || :
+        [ $? -ne 0 ] && sh <(curl -fsSL https://nixos.org/nix/install) --daemon
         [ -z "$2" ] && nix-env -i "$2" || nix-env -i "$1"
     fi
 }
 
-for p in yadm git; do ensure $p; done
+for p in yadm git gnumake; do ensure $p; done
 
 setFail
 
@@ -188,3 +195,5 @@ yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.g
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
+
+for p in yadm git gnumake; do nix-env -e $p; done
