--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 20:55 -->
+<!-- 2022-03-12 Sat 21:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org70b25e0">makefile</a></li>
+<li><a href="#orgabb07bb">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,12 +77,12 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org8384caa">yadm git gnumake fd
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb00e1f9">yadm git "make gnumake" fd
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org7c31ae1">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgeecf946">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -118,7 +118,7 @@ ensure () {
 }
 remove () { [ -z "$2" ] &amp;&amp; nix-env -e "$2" || nix-env -e "$1"; }
 
-for p in yadm git gnumake fd; do ensure $p; done
+for p in yadm git "make gnumake" fd; do ensure $p; done
 
 setFail
 
@@ -130,15 +130,15 @@ make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 
-for p in yadm git gnumake fd; do remove $p; done
+for p in yadm git "make gnumake" fd; do remove $p; done
 </code></pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org70b25e0" class="outline-2">
-<h2 id="org70b25e0">makefile</h2>
-<div class="outline-text-2" id="text-org70b25e0">
+<div id="outline-container-orgabb07bb" class="outline-2">
+<h2 id="orgabb07bb">makefile</h2>
+<div class="outline-text-2" id="text-orgabb07bb">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -168,7 +168,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 20:55</p>
+<p class="date">Created: 2022-03-12 Sat 21:03</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -186,7 +186,7 @@ ensure () {
 }
 remove () { [ -z "$2" ] && nix-env -e "$2" || nix-env -e "$1"; }
 
-for p in yadm git gnumake fd; do ensure $p; done
+for p in yadm git "make gnumake" fd; do ensure $p; done
 
 setFail
 
@@ -198,4 +198,4 @@ make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 
-for p in yadm git gnumake fd; do remove $p; done
+for p in yadm git "make gnumake" fd; do remove $p; done
