--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 21:12 -->
+<!-- 2022-03-12 Sat 21:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org986d1be">makefile</a></li>
+<li><a href="#org4eb55de">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -76,13 +76,17 @@
 <div id="outline-container-f3e32608-7200-4808-9d42-59112f32d395" class="outline-2">
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
+<p>
+Programs necessary for the bootstrap:
+</p>
+
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org01e005c">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orge79299f">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org83d23ba">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org2961ffa">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -113,10 +117,10 @@ ensure () {
     if [ $? -ne 0 ]; then
 	hash nix 2&gt; /dev/null
 	[ $? -ne 0 ] &amp;&amp; sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon
-	[ -z "$2" ] &amp;&amp; nix-env -i "$2" || nix-env -i "$1"
+	[ -z "$2" ] &amp;&amp; nix-env -i "$1" || nix-env -i "$2"
     fi
 }
-remove () { [ -z "$2" ] &amp;&amp; nix-env -e "$2" || nix-env -e "$1"; }
+remove () { [ -z "$2" ] &amp;&amp; nix-env -e "$1" || nix-env -e "$2"; }
 
 for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 
@@ -136,9 +140,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org986d1be" class="outline-2">
-<h2 id="org986d1be">makefile</h2>
-<div class="outline-text-2" id="text-org986d1be">
+<div id="outline-container-org4eb55de" class="outline-2">
+<h2 id="org4eb55de">makefile</h2>
+<div class="outline-text-2" id="text-org4eb55de">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -168,7 +172,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 21:12</p>
+<p class="date">Created: 2022-03-12 Sat 21:25</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -181,10 +185,10 @@ ensure () {
     if [ $? -ne 0 ]; then
         hash nix 2> /dev/null
         [ $? -ne 0 ] && sh <(curl -fsSL https://nixos.org/nix/install) --daemon
-        [ -z "$2" ] && nix-env -i "$2" || nix-env -i "$1"
+        [ -z "$2" ] && nix-env -i "$1" || nix-env -i "$2"
     fi
 }
-remove () { [ -z "$2" ] && nix-env -e "$2" || nix-env -e "$1"; }
+remove () { [ -z "$2" ] && nix-env -e "$1" || nix-env -e "$2"; }
 
 for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 
