--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 21:25 -->
+<!-- 2022-03-12 Sat 23:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org4eb55de">makefile</a></li>
+<li><a href="#org7619918">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -78,12 +78,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orge79299f">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgad844e1">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org2961ffa">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgae96ac1">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -124,6 +124,8 @@ for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 setFail
 
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
+yadm decrypt
+cat "$HOME/.config/yadm/encrypt" | xargs -L1 chown -R $(whoami):$(whoami)
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
@@ -137,9 +139,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org4eb55de" class="outline-2">
-<h2 id="org4eb55de">makefile</h2>
-<div class="outline-text-2" id="text-org4eb55de">
+<div id="outline-container-org7619918" class="outline-2">
+<h2 id="org7619918">makefile</h2>
+<div class="outline-text-2" id="text-org7619918">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -169,7 +171,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 21:25</p>
+<p class="date">Created: 2022-03-12 Sat 23:19</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
