--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 23:21 -->
+<!-- 2022-03-14 Mon 00:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgcc69007">makefile</a></li>
+<li><a href="#org67abfff">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -81,12 +81,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org20a0aa8">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org78b6c69">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org2d0e029">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org2e24af9">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -127,13 +127,18 @@ for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 setFail
 
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
-yadm decrypt
-cat "$HOME/.config/yadm/encrypt" | xargs -L1 chown -R $(whoami):$(whoami)
-chmod 700 "$HOME/.ssh"
-chmod 600 "$HOME/.ssh/*"
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
-yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
+nixos-generate-config || :
+
+subinit="submodule update --init --depth 1 --recursive --remote --force"
+
+read secrets
+yadm sec clone --no-bootstrap $secrets
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+chmod +x "$HOME/.config/yadm-sec/bootstrap"
+"$HOME/.config/yadm-sec/bootstrap"
+
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
@@ -144,9 +149,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-orgcc69007" class="outline-2">
-<h2 id="orgcc69007">makefile</h2>
-<div class="outline-text-2" id="text-orgcc69007">
+<div id="outline-container-org67abfff" class="outline-2">
+<h2 id="org67abfff">makefile</h2>
+<div class="outline-text-2" id="text-org67abfff">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -176,7 +181,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 23:21</p>
+<p class="date">Created: 2022-03-14 Mon 00:19</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -199,13 +204,18 @@ for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 setFail
 
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
-yadm decrypt
-cat "$HOME/.config/yadm/encrypt" | xargs -L1 chown -R $(whoami):$(whoami)
-chmod 700 "$HOME/.ssh"
-chmod 600 "$HOME/.ssh/*"
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
-yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
+nixos-generate-config || :
+
+subinit="submodule update --init --depth 1 --recursive --remote --force"
+
+read secrets
+yadm sec clone --no-bootstrap $secrets
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+chmod +x "$HOME/.config/yadm-sec/bootstrap"
+"$HOME/.config/yadm-sec/bootstrap"
+
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
