--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-24 Thu 20:40 -->
+<!-- 2022-03-24 Thu 21:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -57,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org48e8337">makefile</a></li>
+<li><a href="#orgeeac468">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -80,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org33d6232">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org197442d">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org63cb31b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgefa7115">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -130,12 +130,26 @@ yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.g
 nixos-generate-config || :
 
 subinit="submodule update --init --depth 1 --recursive --remote --force"
+</code></pre>
+</div>
 
-read -p $"Tell me your secrets!\n" secrets &lt; /dev/tty
-yadm sec clone --no-bootstrap $secrets
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
-chmod +x "$HOME/.config/yadm-sec/bootstrap"
-"$HOME/.config/yadm-sec/bootstrap"
+<p>
+Adapted from <a href="https://unix.stackexchange.com/users/48083/graeme">Graeme's</a> answer <a href="https://unix.stackexchange.com/a/121255/270053">here</a>,
+and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldaraz's</a> answer <a href="https://stackoverflow.com/a/15696250/10827766">here</a>:
+</p>
+
+<div class="org-src-container">
+<pre><code class="language-sh match-braces rainbow-braces">read -p $'Tell me your secrets!\n' secrets &lt; /dev/tty
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-sh match-braces rainbow-braces">if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
+    yadm sec clone --no-bootstrap $secrets || :
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+    chmod +x "$HOME/.config/yadm-sec/bootstrap"
+    "$HOME/.config/yadm-sec/bootstrap"
+fi
 
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
 make -f "$HOME/.emacs.d/makefile" soft-init
@@ -148,9 +162,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org48e8337" class="outline-2">
-<h2 id="org48e8337">makefile</h2>
-<div class="outline-text-2" id="text-org48e8337">
+<div id="outline-container-orgeeac468" class="outline-2">
+<h2 id="orgeeac468">makefile</h2>
+<div class="outline-text-2" id="text-orgeeac468">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -180,7 +194,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-24 Thu 20:40</p>
+<p class="date">Created: 2022-03-24 Thu 21:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -207,12 +221,13 @@ yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.g
 nixos-generate-config || :
 
 subinit="submodule update --init --depth 1 --recursive --remote --force"
-
-read -p $"Tell me your secrets!\n" secrets < /dev/tty
-yadm sec clone --no-bootstrap $secrets
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
-chmod +x "$HOME/.config/yadm-sec/bootstrap"
-"$HOME/.config/yadm-sec/bootstrap"
+read -p $'Tell me your secrets!\n' secrets < /dev/tty
+if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
+    yadm sec clone --no-bootstrap $secrets || :
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+    chmod +x "$HOME/.config/yadm-sec/bootstrap"
+    "$HOME/.config/yadm-sec/bootstrap"
+fi
 
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
 make -f "$HOME/.emacs.d/makefile" soft-init
