--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+# This index file is also a shell script! Go to index.syvl.org to see what it can do!
 <<\EOF
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-24 Thu 23:11 -->
+<!-- 2022-03-25 Fri 00:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -56,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org94352fd">makefile</a></li>
+<li><a href="#org9daca39">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -79,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org284ef1c">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb15c741">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org5f95ceb">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orga3a5b4c">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -93,7 +94,8 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF
+<pre><code class="language-sh match-braces rainbow-braces"># This index file is also a shell script! Go to index.syvl.org to see what it can do!
+&lt;&lt;\EOF
 </code></pre>
 </div>
 
@@ -125,9 +127,11 @@ setFail
 
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-nixos-generate-config || :
 
-subinit="submodule update --init --depth 1 --recursive --remote --force"
+# TODO: May need `yadm stash' here
+# yadm stash
+
+nixos-generate-config || :
 </code></pre>
 </div>
 
@@ -144,12 +148,15 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 <div class="org-src-container">
 <pre><code class="language-sh match-braces rainbow-braces">if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     yadm sec clone --no-bootstrap $secrets || :
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+
+    # TODO: May need `yadm stash' here
+    # yadm stash
+
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
 fi
 
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
@@ -160,9 +167,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org94352fd" class="outline-2">
-<h2 id="org94352fd">makefile</h2>
-<div class="outline-text-2" id="text-org94352fd">
+<div id="outline-container-org9daca39" class="outline-2">
+<h2 id="org9daca39">makefile</h2>
+<div class="outline-text-2" id="text-org9daca39">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -192,7 +199,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-24 Thu 23:11</p>
+<p class="date">Created: 2022-03-25 Fri 00:27</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -216,18 +223,23 @@ setFail
 
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-nixos-generate-config || :
 
-subinit="submodule update --init --depth 1 --recursive --remote --force"
+# TODO: May need `yadm stash' here
+# yadm stash
+
+nixos-generate-config || :
 read -p $'Tell me your secrets!\n' secrets < /dev/tty
 if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     yadm sec clone --no-bootstrap $secrets || :
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm sec $subinit
+
+    # TODO: May need `yadm stash' here
+    # yadm stash
+
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
 fi
 
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm $subinit
+GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
