--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-25 Fri 00:27 -->
+<!-- 2022-03-25 Fri 18:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -57,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org9daca39">makefile</a></li>
+<li><a href="#orge577a09">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -80,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb15c741">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org651f04e">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orga3a5b4c">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org360c777">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -124,14 +124,6 @@ remove () { [ -z "$2" ] &amp;&amp; nix-env -e "$1" || nix-env -e "$2"; }
 for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 
 setFail
-
-yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
-yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-
-# TODO: May need `yadm stash' here
-# yadm stash
-
-nixos-generate-config || :
 </code></pre>
 </div>
 
@@ -141,25 +133,43 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">read -p $'Tell me your secrets!\n' secrets &lt; /dev/tty
+<pre><code class="language-sh match-braces rainbow-braces">read -p $'Yadm clone?\n' yc &lt; /dev/tty
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
+<pre><code class="language-sh match-braces rainbow-braces">if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
+    yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git
+    yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
+fi
+
+# TODO: May need `yadm stash' here
+# yadm stash
+
+nixos-generate-config || :
+
+read -p $'Tell me your secrets!\n' secrets &lt; /dev/tty
+if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     yadm sec clone --no-bootstrap $secrets || :
 
-    # TODO: May need `yadm stash' here
-    # yadm stash
+    # TODO: May need `yadm sec stash' here
+    # yadm sec stash
 
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
 fi
 
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
-make -f "$HOME/.emacs.d/makefile" soft-init
-chmod +x "$HOME/.config/yadm/bootstrap"
-"$HOME/.config/yadm/bootstrap"
+read -p $'Initialize Yadm Submodules?\n' ys &lt; /dev/tty
+if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
+    make -f "$HOME/.emacs.d/makefile" soft-init
+fi
+
+read -p $'Bootstrap?\n' bootstrap &lt; /dev/tty
+if [ "$bootstrap" == "y" ] | [ "$bootstrap" == "yes" ]; then
+    chmod +x "$HOME/.config/yadm/bootstrap"
+    "$HOME/.config/yadm/bootstrap"
+fi
 
 # for p in yadm git "make gnumake" fd emacs; do remove $p; done
 </code></pre>
@@ -167,9 +177,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org9daca39" class="outline-2">
-<h2 id="org9daca39">makefile</h2>
-<div class="outline-text-2" id="text-org9daca39">
+<div id="outline-container-orge577a09" class="outline-2">
+<h2 id="orge577a09">makefile</h2>
+<div class="outline-text-2" id="text-orge577a09">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -199,7 +209,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-25 Fri 00:27</p>
+<p class="date">Created: 2022-03-25 Fri 18:26</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -220,28 +230,38 @@ remove () { [ -z "$2" ] && nix-env -e "$1" || nix-env -e "$2"; }
 for p in yadm git "make gnumake" fd emacs; do ensure $p; done
 
 setFail
-
-yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
-yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
+read -p $'Yadm clone?\n' yc < /dev/tty
+if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
+    yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git
+    yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
+fi
 
 # TODO: May need `yadm stash' here
 # yadm stash
 
 nixos-generate-config || :
+
 read -p $'Tell me your secrets!\n' secrets < /dev/tty
 if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     yadm sec clone --no-bootstrap $secrets || :
 
-    # TODO: May need `yadm stash' here
-    # yadm stash
+    # TODO: May need `yadm sec stash' here
+    # yadm sec stash
 
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
 fi
 
-GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
-make -f "$HOME/.emacs.d/makefile" soft-init
-chmod +x "$HOME/.config/yadm/bootstrap"
-"$HOME/.config/yadm/bootstrap"
+read -p $'Initialize Yadm Submodules?\n' ys < /dev/tty
+if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
+    make -f "$HOME/.emacs.d/makefile" soft-init
+fi
+
+read -p $'Bootstrap?\n' bootstrap < /dev/tty
+if [ "$bootstrap" == "y" ] | [ "$bootstrap" == "yes" ]; then
+    chmod +x "$HOME/.config/yadm/bootstrap"
+    "$HOME/.config/yadm/bootstrap"
+fi
 
 # for p in yadm git "make gnumake" fd emacs; do remove $p; done
