--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 01:10 -->
+<!-- 2022-04-04 Mon 01:15 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -57,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org17dcece">makefile</a></li>
+<li><a href="#orgcf0246b">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -80,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgea64f72">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orga5227c1">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org65bf184">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgd7fd1d7">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -143,10 +143,10 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
 	read -p $'Repo already exists! Force clone?\n' fc &lt; /dev/tty
 	if [ "$fc" == "y" ] || [ "$fc" == "yes" ]; then
-	    yadm clone -f $cloneCommand
+	    yadm clone -f "$cloneCommand"
 	fi
     else
-	yadm clone $cloneCommand
+	yadm clone "$cloneCommand"
     fi
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
 fi
@@ -162,10 +162,10 @@ if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
 	read -p $'Secrets repo already exists! Force clone secrets?\n' forceSecrets &lt; /dev/tty
 	if [ "$forceSecrets" == "y" ] || [ "$forceSecrets" == "yes" ]; then
-	    yadm sec clone -f $secCloneCommand
+	    yadm sec clone -f "$secCloneCommand"
 	fi
     else
-	yadm sec clone $secCloneCommand
+	yadm sec clone "$secCloneCommand"
     fi
 
     # TODO: May need `yadm sec stash' here
@@ -193,9 +193,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org17dcece" class="outline-2">
-<h2 id="org17dcece">makefile</h2>
-<div class="outline-text-2" id="text-org17dcece">
+<div id="outline-container-orgcf0246b" class="outline-2">
+<h2 id="orgcf0246b">makefile</h2>
+<div class="outline-text-2" id="text-orgcf0246b">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -225,7 +225,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 01:10</p>
+<p class="date">Created: 2022-04-04 Mon 01:15</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -252,10 +252,10 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
         read -p $'Repo already exists! Force clone?\n' fc < /dev/tty
         if [ "$fc" == "y" ] || [ "$fc" == "yes" ]; then
-            yadm clone -f $cloneCommand
+            yadm clone -f "$cloneCommand"
         fi
     else
-        yadm clone $cloneCommand
+        yadm clone "$cloneCommand"
     fi
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
 fi
@@ -271,10 +271,10 @@ if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
         read -p $'Secrets repo already exists! Force clone secrets?\n' forceSecrets < /dev/tty
         if [ "$forceSecrets" == "y" ] || [ "$forceSecrets" == "yes" ]; then
-            yadm sec clone -f $secCloneCommand
+            yadm sec clone -f "$secCloneCommand"
         fi
     else
-        yadm sec clone $secCloneCommand
+        yadm sec clone "$secCloneCommand"
     fi
 
     # TODO: May need `yadm sec stash' here
