--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 01:31 -->
+<!-- 2022-04-04 Mon 02:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgf7eb0a3">makefile</a></li>
+<li><a href="#org6fdc71f">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -78,12 +78,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgfa2a987">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgde36657">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org364a60b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org3fb8d2b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -131,19 +131,26 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">read -p $'Yadm clone?\n' yc &lt; /dev/tty
+<pre><code class="language-sh match-braces rainbow-braces">read -p $'Impermanent?\n' impermanent &lt; /dev/tty
+if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
+    worktree="/persist/$HOME"
+else
+    worktree="$HOME"
+fi
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
+<pre><code class="language-sh match-braces rainbow-braces">read -p $'Yadm clone?\n' yc &lt; /dev/tty
+cloneCommand="-w $worktree --no-bootstrap https://github.com/shadowrylander/shadowrylander.git"
+if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
 	read -p $'Repo already exists! Force clone?\n' fc &lt; /dev/tty
 	if [ "$fc" == "y" ] || [ "$fc" == "yes" ]; then
-	    yadm clone -f --no-bootstrap https://github.com/shadowrylander/shadowrylander.git
+	    yadm clone -f $cloneCommand
 	fi
     else
-	yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git
+	yadm clone $cloneCommand
     fi
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
 fi
@@ -154,14 +161,15 @@ fi
 nixos-generate-config || :
 
 read -p $'Tell me your secrets!\n' secrets &lt; /dev/tty
+secCloneCommand="-w $worktree --no-bootstrap $secrets"
 if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
 	read -p $'Secrets repo already exists! Force clone secrets?\n' forceSecrets &lt; /dev/tty
 	if [ "$forceSecrets" == "y" ] || [ "$forceSecrets" == "yes" ]; then
-	    yadm sec clone -f --no-bootstrap $secrets
+	    yadm sec clone -f $secCloneCommand
 	fi
     else
-	yadm sec clone --no-bootstrap $secrets
+	yadm sec clone $secCloneCommand
     fi
 
     # TODO: May need `yadm sec stash' here
@@ -189,9 +197,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgf7eb0a3" class="outline-2">
-<h2 id="orgf7eb0a3">makefile</h2>
-<div class="outline-text-2" id="text-orgf7eb0a3">
+<div id="outline-container-org6fdc71f" class="outline-2">
+<h2 id="org6fdc71f">makefile</h2>
+<div class="outline-text-2" id="text-org6fdc71f">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -221,7 +229,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 01:31</p>
+<p class="date">Created: 2022-04-04 Mon 02:51</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
