--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 03:45 -->
+<!-- 2022-04-04 Mon 04:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -57,7 +57,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orga45109a">makefile</a></li>
+<li><a href="#org27199cf">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -80,12 +80,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org56a8c95">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org2c074e2">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org3de32ed">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgee08d16">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -176,7 +176,7 @@ if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
 	yadm sec clone $secCloneCommand
     fi
 
-    yadm sec gitconfg --unset core.worktree
+    yadm sec gitconfig --unset core.worktree
 
     # TODO: May need `yadm sec stash' here
     # yadm sec stash
@@ -203,9 +203,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orga45109a" class="outline-2">
-<h2 id="orga45109a">makefile</h2>
-<div class="outline-text-2" id="text-orga45109a">
+<div id="outline-container-org27199cf" class="outline-2">
+<h2 id="org27199cf">makefile</h2>
+<div class="outline-text-2" id="text-org27199cf">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -235,7 +235,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 03:45</p>
+<p class="date">Created: 2022-04-04 Mon 04:03</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -295,7 +295,7 @@ if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
         yadm sec clone $secCloneCommand
     fi
 
-    yadm sec gitconfg --unset core.worktree
+    yadm sec gitconfig --unset core.worktree
 
     # TODO: May need `yadm sec stash' here
     # yadm sec stash
