--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 04:32 -->
+<!-- 2022-04-04 Mon 04:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orga19d596">makefile</a></li>
+<li><a href="#org99cdf63">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -78,12 +78,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgbf4e3b5">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org027ec8c">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgb442304">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org8701842">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -187,7 +187,7 @@ if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
     if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
 	yadm gitconfig core.worktree $worktree
     fi
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm -w $worktree submodule update --init --depth 1 --recursive --remote --force
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm --work-tree $worktree submodule update --init --depth 1 --recursive --remote --force
     yadm gitconfig core.worktree $HOME
     make -f "$HOME/.emacs.d/makefile" soft-init
 fi
@@ -204,9 +204,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orga19d596" class="outline-2">
-<h2 id="orga19d596">makefile</h2>
-<div class="outline-text-2" id="text-orga19d596">
+<div id="outline-container-org99cdf63" class="outline-2">
+<h2 id="org99cdf63">makefile</h2>
+<div class="outline-text-2" id="text-org99cdf63">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -236,7 +236,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 04:32</p>
+<p class="date">Created: 2022-04-04 Mon 04:34</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
