--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-04 Mon 04:51 -->
+<!-- 2022-04-04 Mon 05:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org632a373">makefile</a></li>
+<li><a href="#org56ceeab">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -78,12 +78,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orga0a2021">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb3c4c83">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgedec13f">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgfec913b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -154,9 +154,7 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     fi
 
     yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
-
-    # TODO: May need `yadm stash' here
-    # yadm stash
+    yadm stash
 fi
 
 nixos-generate-config || :
@@ -174,9 +172,7 @@ if [ "$secrets" != "n" ] &amp;&amp; [ "$secrets" != "no" ]; then
     fi
 
     yadm sec gitconfig core.worktree $HOME
-
-    # TODO: May need `yadm sec stash' here
-    # yadm sec stash
+    yadm sec stash
 
     chmod +x "$HOME/.config/yadm-sec/bootstrap"
     "$HOME/.config/yadm-sec/bootstrap"
@@ -184,9 +180,12 @@ fi
 
 read -p $'Initialize Yadm Submodules?\n' ys &lt; /dev/tty
 if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
+    if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
+	yadm gitconfig core.worktree $worktree
+    fi
     GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm -C $worktree submodule update --init --depth 1 --recursive --remote --force
     yadm gitconfig core.worktree $HOME
-    make -f "$HOME/.emacs.d/makefile" soft-init
+    make -f "$worktree/.emacs.d/makefile" soft-init
 fi
 
 read -p $'Bootstrap?\n' bootstrap &lt; /dev/tty
@@ -201,9 +200,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org632a373" class="outline-2">
-<h2 id="org632a373">makefile</h2>
-<div class="outline-text-2" id="text-org632a373">
+<div id="outline-container-org56ceeab" class="outline-2">
+<h2 id="org56ceeab">makefile</h2>
+<div class="outline-text-2" id="text-org56ceeab">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -233,7 +232,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-04-04 Mon 04:51</p>
+<p class="date">Created: 2022-04-04 Mon 05:01</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
